# xnumpy

./: .gitignore  Makefile  README  TODO  TODO_CROSS_ENTROPY.txt  TODO_EXO  TODO_FFI.txt  TODO_JIT.txt  benchmark.csv  pyproject.toml
benchmarks/: TODO.txt  results.csv  run.py
benchmarks/kernels/: adam.py  adam_neon.py  adam_numba.py  add_numba.py  cross_entropy_exo.py  cross_entropy_neon.py  cross_entropy_numba.py  dot_neon.py  dot_numba.py  embedding_numba.py  fused_attention.py  matmul.py  matmul_exo.py  matmul_neon.py  matmul_numba.py  matvec_exo.py  matvec_neon.py  matvec_numba.py  relu_numba.py  rmsnorm_neon.py  rmsnorm_numba.py  saxpy_numba.py  softmax.py  softmax_exo.py  softmax_neon.py  softmax_numba.py  weighted_sum_exo.py  weighted_sum_neon.py  weighted_sum_numba.py
benchmarks/microgpt/: TODO
docs/: design-main.md  design-patches_llvm.md  exo-missing.txt  memref-explained.txt  trace.txt
examples/: demo.py
exojit/: jitcall.c  main.py  patches_xdsl_intrinsics.py  patches_xdsl_llvm.py
exonp/: pyproject.toml
experiment/numpy/: NOTES  bench.py  header.tex  report.Rmd  run.sh
experiments/: bench.py
leaderboard/: bench_exojit.py  bench_jax.py  bench_numpy.py  bench_original.py  bench_plain.py  bench_torch.py  bench_vanilla.py  original.py  run.sh  utils.py  vanilla.py  weights.json
leaderboard/times/: bench_exojit.csv  bench_jax.csv  bench_numpy.csv  bench_original.csv  bench_plain.csv  bench_torch.csv  bench_vanilla.csv  (+1 more)
microgpt-benchmarks-game/: README  bench_exojit.py  bench_exojit_full.py  bench_jax.py  bench_numpy.py  bench_original.py  bench_plain.py  bench_torch.py  run.sh  utils.py
paper/: abstract.txt  bench.py  note.txt  references.bib  report.Rmd  run.sh
tests/: _utils.py  conftest.py  test_ir_generation.py
xdsl_exo/: compiler.py  convert_blas.py  convert_memref_to_llvm.py  extended_memref_to_ptr.py  generator.py  main.py  patches.py  patches_intrinsics.py  patches_llvm.py  patches_llvmlite.py  reconcile_index_casts.py  rewrites.py
xnumpy/: backends.py  main.py  patches_exo.py  patches_intrinsics.py  patches_llvm.py  patches_llvmlite.py  patches_xdsl_intrinsics.py  patches_xdsl_llvm.py
(+91 files in other folders)
