[project]
name = "xnumpy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "exo-lang==1.0.0",
    "xdsl==0.57.2",
    "click",
    "lit",
    "numpy",
    "pytest",
    "pytest-xdist",
    "pytest-forked",
    "llvmlite",
    "plotnine",
    "polars",
    "pyarrow",
    "tqdm",
    "filelock",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xnumpy*"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-n auto --forked -v"

[project.scripts]
xnumpy = "xnumpy.main:cli"
