[project]
name = "exojit"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "exo-lang==1.0.0",
    "xdsl @ git+https://github.com/xdslproject/xdsl.git@cb5bedcc45faae36b4eb988b63cc87bffc8583d1",
    "click",
    "cffi",
    "lit",
    "numpy",
    "pytest",
    "pytest-xdist",
    "pytest-forked",
    "llvmlite",
    "plotnine",
    "plotext",
    "polars",
    "pyarrow",
    "tqdm",
    "filelock",
    "jax",
    "numba",
    "torch",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["exojit*"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-n auto --forked -v"

[project.scripts]
exojit = "exojit.main:cli"
